settled on solution for break in left rail and fixed up styling for nav and hed a bit

--- a/css/style.css
+++ b/css/style.css
@@ -263,17 +263,21 @@ td.td-map {
 }
 
 tbody.begin-non-debt-info {
-  border-top: 30px solid #f3f3f3;
-  position: relative;
+  /*border-top: 30px solid #f3f3f3;*/
 }
 
 tbody.begin-non-debt-info::before {
   content: '';
-  position: absolute;
   background-color: #f3f3f3;
-  width: 110%;
-  height: 30px;
-  bottom: -95px;
+  display: block;
+  position: relative;
+  height: 20px;
+  width: 310%;
+  z-index: 10;
+}
+
+tbody.end-debt-info {
+  border-bottom: 2px solid #ececec !important;
 }
 
 td.td-table {
@@ -312,6 +316,8 @@ h1 {
   color: #fff;
   letter-spacing: .5px;
   font-style: normal !important;
+  border-bottom: 1px solid rgba(255,255,255,0.5);
+  padding: 30px 0 15px 0;
 }
 h2 {
   font-size: 18px;
@@ -527,10 +533,11 @@ li {
   max-height: 82px !important;
 }
 tr.cell-column {
+  color: #696969;
   height: 25px;
-  text-transform: uppercase;
-  font-size: 11px;
-  letter-spacing: 1.6px;
+  font-size: 13px;
+  line-height: 16px;
+  letter-spacing: 0.1em;
 }
 
 path.hoverNational {
@@ -787,9 +794,8 @@ th {
 .left-table tbody {
   border-bottom: 1.1px solid #ececec;
   cursor: pointer;
-  border-right: 5px solid #fff;
-/*  width: 288px;
-*/}
+  /*border-right: 5px solid #fff;*/
+}
 .group-0 {
   border-top: 1.1px solid #ececec;
 }
@@ -855,7 +861,9 @@ th {
 }
 
 div#cat-nav > ul > li {
+  border-right: 1px solid #696969;
   color: #ffffff !important;
+  cursor: pointer;
   display: inline;
   font-size: 16px;
   padding: 10px 20px;
@@ -863,9 +871,19 @@ div#cat-nav > ul > li {
   top: 10px;
 }
 
-div#cat-nav > ul {
-  text-align: left;
+div#cat-nav > ul > li:hover {
+  background-color: #696969;
+}
 
+div#cat-nav > ul > li.selected-nav {
+  background-color: #FDBF11;
+  color: #000000;
+  font-weight: bold;
+}
+
+div#cat-nav > ul {
+  padding-left: 0px;
+  text-align: left;
 }
 
 
@@ -1023,11 +1041,16 @@ html .ui-button.ui-state-disabled:active {
   }
 }
 
-
 #bar-chart {
   padding-left: 10px;
   float: left;
 }
+
+.bar-group > text {
+  font-weight: bold;
+}
+
+
 @media (max-width: 800px){
 
   
